# tinylang-compiler

./: .gitignore  README.md
tinylang/: CMakeLists.txt  main.cc  main.ih  text.txt  text.xml  text2.txt  text2.xml
tinylang/ast/: astnode.h  astprogramnode.cc  astprogramnode.h
tinylang/ast/expressions/: astaddopnode.h  astbinaryopnode.cc  astbinaryopnode.h  astexprnode.h  astfunctioncallnode.cc  astfunctioncallnode.h  astidentifiernode.cc  astidentifiernode.h  astmulopnode.h  astrelopnode.h  astunarynode.cc  astunarynode.h
tinylang/ast/factors/: astboolliteralnode.h  astcharliteralnode.h  astfactornode.h  astfloatliteralnode.h  astfunctioncallnode.h  astidentifiernode.h  astintliteralnode.h  astliteralnode.h  astunarynode.h
tinylang/ast/literals/: astboolliteralnode.cc  astboolliteralnode.h  astcharliteralnode.cc  astcharliteralnode.h  astfloatliteralnode.cc  astfloatliteralnode.h  astintliteralnode.cc  astintliteralnode.h  astliteralnode.h
tinylang/ast/statements/: astassignmentnode.cc  astassignmentnode.h  astblocknode.cc  astblocknode.h  astforstmtnode.cc  astforstmtnode.h  astfunctionnode.cc  astfunctionnode.h  astfunctionprototypenode.cc  astfunctionprototypenode.h  astifstmtnode.cc  astifstmtnode.h  astprintstmtnode.cc  astprintstmtnode.h  astreturnstmtnode.cc  astreturnstmtnode.h  aststatementnode.h  astvardeclnode.cc  astvardeclnode.h  astwhilestmtnode.cc  astwhilestmtnode.h
tinylang/exceptions/: lexicalerror.h  semanticerror.h
tinylang/identifier/: gettype.cc  identifier.cc  identifier.h  identifier.ih  istrue.cc  opadd.cc  opdiv.cc  opet.cc  opmul.cc  opnot.cc  opst.cc  opste.cc  opstream.cc  opsub.cc  typetostring.cc
tinylang/lexer/: getinputtype.cc  getnextline.cc  getnexttoken.cc  gettokentype.cc  lexer.cc  lexer.h  lexer.ih  trimcurrentline.cc  trimline.cc
tinylang/parser/: getnexttoken.cc  parse.cc  parseassignment.cc  parseblock.cc  parseexpr.cc  parsefactor.cc  parsefor.cc  parsefunctioncall.cc  parsefunctiondef.cc  parsefunctionprototype.cc  parseif.cc  parseliteral.cc  parseprint.cc  parser.h  parser.ih  parsereturn.cc  parsesemicolon.cc  parsesimpleexpr.cc  parsestatement.cc  parseterm.cc  parsevardecl.cc  parsewhile.cc
tinylang/src/: main.cc
tinylang/src/ast/expressions/: astexprnode.h  astidentifiernode.cc  astidentifiernode.h  astunarynode.cc  astunarynode.h
tinylang/src/ast/literals/: astcharliteralnode.cc  astfloatliteralnode.cc  astintliteralnode.cc  astintliteralnode.h  astliteralnode.h
tinylang/src/ast/statements/: astassignmentnode.cc  astassignmentnode.h  astforstmtnode.h  astfunctionnode.cc  astfunctionnode.h  astfunctionprototypenode.h  astifstmtnode.cc  astprintstmtnode.h  astreturnstmtnode.cc  astreturnstmtnode.h  aststatementnode.h  astwhilestmtnode.h
tinylang/src/exceptions/: syntaxerror.h
tinylang/src/identifier/: identifier.cc  identifier.ih  opand.cc  opgt.cc  opgte.cc  opnegate.cc  opnet.cc  opor.cc
tinylang/src/lexer/: getinputtype.cc  getnexttoken.cc  lexer.h  trimcurrentline.cc
tinylang/src/literal/: istrue.cc  literal.cc  literal.h  literal.ih  opadd.cc  opand.cc  opdiv.cc  opet.cc  opgt.cc  opgte.cc  opmul.cc  opnegate.cc  opnet.cc  opnot.cc  opor.cc  opst.cc  opste.cc  opstream.cc  opsub.cc
tinylang/src/parser/: parse.cc  parseassignment.cc  parseblock.cc  parseexpr.cc  parsefunctioncall.cc  parsefunctiondef.cc  parseif.cc  parser.h  parsereturn.cc  parsesemicolon.cc  parsesimpleexpr.cc  parsevardecl.cc
tinylang/src/symboltable/: addfunction.cc  addidentifier.cc  addidentifiertype.cc  findfndef.cc  findidentifier.cc  symboltable.h  symboltable.ih  updateidentifier.cc
tinylang/src/token/: token.cc
tinylang/src/type/: opstream.cc  type.cc
tinylang/src/visitor/: visitor.h
tinylang/src/visitor/interpretervisitor/: interpretervisitor.h  visitassignment.cc  visitbinaryop.cc  visitblock.cc  visitbool.cc  visitchar.cc  visitdecl.cc  visitfloat.cc  visitfor.cc  visitfunction.cc  visitfunctioncall.cc  visitfunctionprot.cc  visitid.cc  visitif.cc  visitint.cc  visitprint.cc  visitreturn.cc  visitunary.cc  visitwhile.cc
tinylang/src/visitor/semanticvisitor/: checkreturn.cc  semanticvisitor.h  semanticvisitor.ih  validatetypebinaryop.cc  validatetypeunaryop.cc  visitassignment.cc  visitbinaryop.cc  visitbool.cc  visitdecl.cc  visitfloat.cc  visitfor.cc  visitfunction.cc  visitfunctioncall.cc  visitfunctionprot.cc  visitid.cc  visitif.cc  visitint.cc  visitprogram.cc  visitreturn.cc
tinylang/src/visitor/xmlvisitor/: visitassignment.cc  visitbinaryop.cc  visitblock.cc  visitbool.cc  visitchar.cc  visitdecl.cc  visitfloat.cc  visitfor.cc  visitfunction.cc  visitfunctioncall.cc  visitfunctionprot.cc  visitid.cc  visitif.cc  visitint.cc  visitprint.cc  (+5 more)
tinylang/symboltable/: addfunction.cc  addidentifier.cc  addidentifiertype.cc  findfndef.cc  findidentifier.cc  getfndef.cc  getidentifiertype.cc  symboltable.h  updateidentifierbool.cc  updateidentifierchar.cc  updateidentifierfloat.cc  updateidentifierint.cc
tinylang/token/: isrelop.cc  token.cc  token.h  token.ih
tinylang/type/: opstream.cc  type.h  type.ih
tinylang/visitor/interpretervisitor/: interpretervisitor.h  interpretervisitor.ih  visitassignment.cc  visitbinaryop.cc  visitblock.cc  visitbool.cc  visitchar.cc  visitdecl.cc  visitfloat.cc  visitfor.cc  visitfunction.cc  visitfunctioncall.cc  visitfunctionprot.cc  visitid.cc  visitif.cc  visitint.cc  visitprint.cc  visitprogram.cc  visitreturn.cc  visitunary.cc  visitwhile.cc
tinylang/visitor/semanticvisitor/: semanticvisitor.h  visitassignment.cc  visitbinaryop.cc  visitblock.cc  visitbool.cc  visitchar.cc  visitdecl.cc  visitfloat.cc  visitfor.cc  visitfunction.cc  visitfunctioncall.cc  visitfunctionprot.cc  visitid.cc  visitif.cc  visitint.cc  visitprint.cc  visitprogram.cc  visitreturn.cc  visitunary.cc  visitwhile.cc
tinylang/visitor/xmlvisitor/: visitblock.cc  visitbool.cc  visitdecl.cc  visitfloat.cc  visitfunction.cc  visitfunctioncall.cc  visitfunctionprot.cc  visitid.cc  visitif.cc  visitorfunctionprot.cc  visitprogram.cc  visitunary.cc  xmlvisitor.cc  xmlvisitor.h  xmlvisitor.ih
